--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+#logo{
+    height: 32px;
+    width: 32px;
+}
+tbody, td, tfoot, th, thead, tr {
+    text-align: center;
+}
